data/all_generated_tests/raw_wast_tests/block_InvalidorInconsistentControlFlowGraph_2449.wast
;; 10. **Test Undetected Unreachable Block Section**:    - Description: Include a code segment within the block that is never reachable due to previous unconditional branches.    - Constraint: Verify that the implementation detects and handles unreachable code segments within blocks.    - CFG Relevance: Unreachable code should be identified to maintain a clean and accurate CFG without redundant or dead paths.

(assert_invalid
  (module (func $unreachable-block-detection
    (block
      (br 0)
      (i32.const 1) ; Unreachable code
    )
  ))
  "unreachable code"
)